--- a/index.html
+++ b/index.html
@@ -114,7 +114,6 @@
                 <div class="clearfix"></div>
             </div>
             <div class="product-bar">
-                <!-- <div class="ribbon-wrapper-green"><div class="ribbon-green">COMING SOON</div></div> -->
                 <div class="message  pull-left">
                     <h1>Douglas County Open Expenditures</h1>
                     <p>Douglas County Open Expenditures provides access to vendor payments processed by the County's Finance Office. Payment information is searchable by fund, department, expense category and vendor.</p>
@@ -125,7 +124,7 @@
                         <span class="play">&#9658;</span>
                         <div class="overlay"></div>
                     </a>
-                    <img src="img/products/openbudget.jpg" height="300px">
+                    <img src="img/products/openexpenses.jpg" height="300px">
                 </div>
                 <div class="clearfix"></div>
             </div>
