--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="content-inner" style="opacity: 1;" id="services_tab">
             <div class="subject">
                 <h1 class="title">Open Data Services</h1>
-                <p class="description">Welcome to the Douglas County portal. Below are the current data products that have been created and released through this initiative.</p>
+                <p class="description">Welcome to the Douglas County portal. Below are the current and planned data products that have been created and released through this initiative.</p>
             </div>
             <div class="product-bar">
                 <div class="message pull-left">
@@ -146,7 +146,7 @@
             <div class="product-bar">
                 <div class="message pull-left">
                     <h1>Douglas County Outdoors</h1>
-                    <p>There are hundreds of miles of trails out there to hike, bike or explore on horseback. There’s Castlewood Canyon, Chatfield and Roxborough State Parks. Over 48,000 acres of protected Open Space. And our hefty share of the million-acre Pike National Forest.</p>
+                    <p>Find a favorite or seek a new place to explore - the Douglas County Outdoors application lists hundreds of miles of trails out there to hike, bike or explore on horseback.</p>
                     <p class="tags">Tags: <span>Open Space</span><span>Trails</span><span>Maps</span></p>
                 </div>
                 <div class="thumb pull-right">
@@ -179,7 +179,7 @@
         <div class="content-inner hidden" style="opacity: 1;" id="summary_tab">
             <div class="subject">
                 <h1 class="title">Douglas County Publishing Summary</h1>
-                <p class="description">Welcome to the Douglas Counties Publishing Plans. These plans and supporting data inventories are the result of many hours of hard work by departmental data coordinators and their colleagues. It is here we will not just report the plans but automatically track progress as data gets published over time.</p>
+                <p class="description">Welcome to the Open Data Publishing Plan. These plans and supporting data inventories are the result of many hours of hard work by departmental data coordinators and their colleagues. It is here we will not just report the plans but automatically track progress as data gets published over time.</p>
                 <br>
                 <div id="plan-picker" style="margin-bottom: 15px;">
                     <form class="form-inline">
@@ -371,10 +371,10 @@
                 <h1 class="title">Greetings, Developer</h1>
                 <p>Aside from being free to use, public data is different from private data in two major ways. The first is that public data does not include any personally identifiable information, and private data sometimes does. The second is that public data is always secondary data, meaning it is collected by the government for the purposes of government operations (primary data), but then when re-purposed by data consumers it becomes secondary data. This means that, quite often, data consumers are limited in their capacity to request changes to the data that meet their needs. In some scenarios, there is an open feedback loop, where data consumers can request enhancements to the formatting or content of the data.  At Douglas County you can suggest a data set at: <a href="https://data.douglas.co.us/nominate">https://data.douglas.co.us/nominate</a> or contacting us directly at <a href="mailto://opendata@douglas.co.us">opendata@douglas.co.us</a>.  If you make something great with our data we would also love to hear about it!</p>
                 <br>
-                <p>Below you will find vairous tools and ideas to explore and create something new with the data we publish.  Make sure to view our "Open Data Services" to see what we current have avaiable.</p>
+                <p>Below you will find vairous tools and ideas to explore and create something new with the data we publish.  Make sure to view our "Open Data Services" to see what we currently have available.</p>
                 <br>
                 <h1 class="title">Socrata Platform</h1>
-                <p>This is the data platform that has been selected by Douglas County to store all of our no geospatial data.  You can access our portal at: <a href="https://data.douglas.co.us/" target="_blank">https://data.douglas.co.us/</a></p>
+                <p>This is the data platform that has been selected by Douglas County to store all of our tabular data.  You can access our portal at: <a href="https://data.douglas.co.us/" target="_blank">https://data.douglas.co.us/</a></p>
                  <br>
                 <p>Platform provides:</p>
                 <ul class="normal">
@@ -384,7 +384,7 @@
                 </ul>
                 <br>
                 <h1 class="title">Socrata Google Maps</h1>
-                <p>If you are using some of our location data and wanting to put a location map on your website take a look at this library.</p>
+                <p>If you are using some of our location data and are wanting to put a location map on your website take a look at this library.</p>
                 <br>
                 <p>How to Get/Use It:</p>
                 <ul class="normal">
@@ -395,12 +395,12 @@
                 <img src="https://github.com/mikegiddens/Socrata-GoogleMaps/raw/master/resources/images/seattle.JPG" style="width: 100%;border: 1px solid black;margin: 15px 0 15px 0;">
                 <br>
                 <h1 class="title">Socrata Visualizations</h1>
-                <p>If you are looking for an easy way to generate simple graphs, pie charts, comboboxes check our our Javascript library to quickly render graphic components based on Socrata as the data source.</p>
+                <p>If you are looking for an easy way to generate simple graphs, pie charts, and comboboxes, check out our Javascript library to quickly render graphic components based on Socrata as the data source.</p>
                 <br>
                 <p>How to Get/Use It:</p>
                 <ul class="normal">
                     <li>Download from Github here: <a href="https://github.com/mikegiddens/socrata-visualizations" target="_blank">https://github.com/mikegiddens/socrata-visualizations</a></li>
-                    <li>Hook it up to any of our datasets or any other Socrata data provider</li>
+                    <li>Hook it up to any of our datasets or any other Socrata data provider.</li>
                     <li>Check out our publishing plan for live examples.</li>
                 </ul>   
                 <br>
@@ -410,11 +410,11 @@
                 <p>How to Get/Use It:</p>
                 <ul class="normal">
                     <li>Create an account to gain free access at <a href="http://www.cartodb.com" target="_blank">www.cartodb.com</a>, upload data, style it and then publish an iFrame or shareable link.</li>
-                    <li>Tell data stories and perform complex spatial analyses using multiple layers in a single map frame, customize queries and css styles all in one access point.</li>
+                    <li>Tell data stories and perform complex spatial analyses using multiple layers in a single map frame; customize queries and css styles all in one access point.</li>
                 </ul>     
                 <br>
                 <h1 class="title">Microsoft Power BI</h1>
-                <p>If you are a county employee you shoudl have access to Power BI in your Microsoft 365 apps.</p>
+                <p>Power BI is a powerful business analytics tool from Microsoft that can be run locally or in the cloud. Office365 users should be able to find and install PowerBI in the suite of applications provided by their Office365 subscription.</p>
                 <br>
                 <p>How to Get/Use It:</p>
                 <ul class="normal">
@@ -430,7 +430,7 @@
         <div class="content-inner hidden" style="opacity: 1;" id="publishing_plan_tab">
             <div class="subject">
                 <h1 class="title">Publishing Plan</h1>
-                <p class="description">Welcome to the Douglas Counties Publishing Plans. These plans and supporting data inventories are the result of many hours of hard work by departmental data coordinators and their colleagues. It is here we will not just report the plans but automatically track progress as data gets published over time.</p>
+                <p class="description">Welcome to the Douglas Counties Publishing Plans. These plans and supporting data inventories are the result of many hours of hard work by departmental data coordinators and their colleagues. We automatically track progress as data gets published over time.</p>
             </div>
             <div class="subject topline">
 
@@ -518,7 +518,7 @@
                 <div class="row inner-break">
                     <div class="col-md-12">
                         <h3 class="graph-title">Documentation and usability</h3>
-                        <p class="graph-description">We strive to publishe all datasets "natively" meaning it is hosted in our open data platform, which provides more tools for using the data.  There are cases where we still maintain our Geospaital data in our ArcGIS platform.</p>
+                        <p class="graph-description">We strive to publish all datasets "natively" meaning it is hosted in our open data platform, which provides more tools for using the data.  We maintain our Geospatial data in our ArcGIS Online platform.</p>
                     </div>
                     <div class="col-md-6 chart">
                         <p class="chart-title center">% of datasets natively hosted</p>
