--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
                             <span class="jobtitle">GIS Manager</span>
                         </div>
                     </div>
-                    <div class="profile-box no-img">
+                    <div class="profile-box no-img" style="background-image: url(img/staff/mikegiddens.jpg)">
                         <div class="p-box-inner">
                             <span class="name">Mike Giddens</span>
                             <span class="jobtitle">Data Scientist</span>
