Spacing issue fix

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <div class="inner">
             <p class="title">Open Data</p>
-            <h2 class="tagline">Redefining transparency&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; in Douglas County</h2>
+            <h2 class="tagline">Redefining Transparency<!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; --> in Douglas County</h2>
             <p class="description">The idea that county data should be freely available to everyone to use and republish as they wish, without restrictions from copyright, patents or other mechanisms of control.</p><br><br>
         </div>
 
