--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
         <div class="inner">
             <p class="title">Open Data</p>
-            <h2 class="tagline">Redefining Transparency<!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; --> in Douglas County</h2>
-            <p class="description">The idea that county data should be freely available to everyone to use and republish as they wish, without restrictions from copyright, patents or other mechanisms of control.</p><br><br>
+            <h2 class="tagline">Redefining Transparency in Douglas County</h2>
+            <p class="description">By leveraging public data as a strategic community asset and providing it as a service, we are building solutions to make government data accessible, useful, and personally relevant to the citizens and businesses in Douglas County.</p><br><br>
         </div>
 
         <div class="navbar clearfix">
@@ -65,12 +65,12 @@
         <div class="content-inner" style="opacity: 1;" id="services_tab">
             <div class="subject">
                 <h1 class="title">Open Data Services</h1>
-                <p class="description">Welcome to the Douglas County portal. Below are the current and planned data products that have been created and released through this initiative.</p>
+                <p class="description">Welcome to the Douglas County Open Data products portal. Below are the current and planned data products that have been created and released through this initiative.</p>
             </div>
             <div class="product-bar">
                 <div class="message pull-left">
                     <img src="img/douglascountydata-logo.png" height="75px">
-                    <p>Open Data Initiative Guidelines have been developed to assure compliance with Colorado Revised Statutes governing protected information. What is protected from public access today will continue to be protected.  You can explore the datasets that have been published on our data portal.</p>
+                    <p>DougCoData.org is our primary catalog of publicly available tabular data. Here you will find the data that underpins much of the data products we provide, as well as tools to chart, graph, visualize, and create data views that are specific to your needs.</p>
                     <p class="tags">Tags: <span>API</span><span>CSV</span><span>Socrata</span></p>
                 </div>
                 <div class="thumb pull-right">
@@ -86,7 +86,7 @@
                 <div class="ribbon-wrapper-green"><div class="ribbon-green">COMING SOON</div></div>
                 <div class="message pull-left">
                     <img src="img/products/nearmedc-logo.png" height="75px">
-                    <p>Get updates on the topics and areas you care about in Douglas County.</p>
+                    <p>NearMeDC is a notifications platform that notifies you when updates are made to community resources, Count building permits, and road construction projects.</p>
                     <p class="tags">Tags: <span>Transportation</span><span>Notifications</span></p>
                 </div>
                 <div class="thumb pull-right">
