--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="product-bar">
                 <div class="message pull-left">
                     <img src="img/douglascountydata-logo.png" height="75px">
-                    <p>DougCoData.org is our primary catalog of publicly available tabular data. Here you will find the data that underpins much of the data products we provide, as well as tools to chart, graph, visualize, and create data views that are specific to your needs.</p>
+                    <p>DougCoData.org is our primary catalog of publicly available tabular data. Here you will find the data that underpins many of the data products we provide; as well as tools to chart, graph, visualize, and create data views that are specific to your needs.</p>
                     <p class="tags">Tags: <span>API</span><span>CSV</span><span>Socrata</span></p>
                 </div>
                 <div class="thumb pull-right">
@@ -120,7 +120,7 @@
                     <p class="tags">Tags: <span>Finances</span><span>Expenses</span></p>
                 </div>
                 <div class="thumb pull-right">
-                    <a target="_blank" target="_blank" href="http://expenses.douglas.co.us/">
+                    <a target="_blank" href="http://expenses.douglas.co.us/">
                         <span class="play">&#9658;</span>
                         <div class="overlay"></div>
                     </a>
@@ -135,7 +135,7 @@
                     <p>DougCoConnect is a parcel-centric data mapping and visualization tool that allows users to dive into County data to find trends and insights on the properties within Douglas County.</p>
                 </div>
                 <div class="thumb pull-right">
-                    <a target="_blank" href="http://community.spatialest.com/co/douglas/">
+                    <a target="_blank" href="http://dougcoconnect.com">
                         <span class="play">&#9658;</span>
                         <div class="overlay"></div>
                     </a>
@@ -179,7 +179,7 @@
         <div class="content-inner hidden" style="opacity: 1;" id="summary_tab">
             <div class="subject">
                 <h1 class="title">Douglas County Publishing Summary</h1>
-                <p class="description">Welcome to the Open Data Publishing Plan. These plans and supporting data inventories are the result of many hours of hard work by departmental data coordinators and their colleagues. It is here we will not just report the plans but automatically track progress as data gets published over time.</p>
+                <p class="description">This summary shows the number of datasets we have published, along with the datasets we have identified and plan to publish in the near future - either from County sources or from our partnering agencies.</p>
                 <br>
                 <div id="plan-picker" style="margin-bottom: 15px;">
                     <form class="form-inline">
@@ -189,8 +189,9 @@
                             </div>
                             <label for="plan-picker-select">Showing plan for the period covering</label>
                             <select id="plan-picker-select" class="form-control" style="width: auto; font-size: 18px; font-weight: 700; height: auto">
-                                <option value="0">Jan 2016 to Jun 2016</option>
-                                <option value="1">Jan 2015 to Dec 2015</option>
+                                <option value="0">Jul 2016 to Dec 2016</option>
+                                <option value="1">Jan 2016 to Jun 2016</option>
+                                <option value="2">Jan 2015 to Dec 2015</option>
                             </select>
                         </div>
                     </form>
@@ -245,7 +246,7 @@
         <div class="content-inner hidden" style="opacity: 1;" id="team_tab">
             <div class="subject">
                 <h1 class="title">The Open Data Team</h1>
-                <p class="description">Welcome to the teams that are making this all happen.  Meetings are held throughout the month to discuss current and future plans on how to improve the data provided and to build our partnerships and outreach programs.</p>
+                <p class="description">Welcome to the team making this all happen.  Meetings are held throughout the month to discuss current and future plans on how to improve the data provided and to build our partnerships and outreach programs.</p>
 
                 <div class="section">
                     <h1 class="title">Core Team</h1>
@@ -430,7 +431,7 @@
         <div class="content-inner hidden" style="opacity: 1;" id="publishing_plan_tab">
             <div class="subject">
                 <h1 class="title">Publishing Plan</h1>
-                <p class="description">Welcome to the Douglas Counties Publishing Plans. These plans and supporting data inventories are the result of many hours of hard work by departmental data coordinators and their colleagues. We automatically track progress as data gets published over time.</p>
+                <p class="description">Welcome to the Douglas County Publishing Plans. These plans and supporting data inventories are the result of many hours of hard work by departmental data coordinators and their colleagues. We automatically track progress as data gets published over time.</p>
             </div>
             <div class="subject topline">
 
