Pre-Launch changes
Added Diane and Christine photos; removed “coming soon” from
DougCoConnect product

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <p class="tags">Tags: <span>Transportation</span><span>Notifications</span></p>
                 </div>
                 <div class="thumb pull-right">
-                    <!--<a target="_blank" href="http://www.nearmedc.org">
+                    <!--<a target="_blank" href="http://www.nearmedc.com">
                         <span class="play">&#9658;</span>
                         <div class="overlay"></div>
                     </a>-->
@@ -129,7 +129,7 @@
                 <div class="clearfix"></div>
             </div>
             <div class="product-bar">
-                <div class="ribbon-wrapper-green"><div class="ribbon-green">COMING SOON</div></div>
+                <!-- <div class="ribbon-wrapper-green"><div class="ribbon-green">COMING SOON</div></div> -->
                 <div class="message pull-left">
                     <img src="img/dougcoconnect.svg" height="75px">
                     <p>DougCoConnect is a parcel-centric data mapping and visualization tool that allows users to dive into County data to find trends and insights on the properties within Douglas County.</p>
@@ -250,7 +250,7 @@
                 <div class="section">
                     <h1 class="title">Core Team</h1>
 
-                    <div class="profile-box no-img">
+                    <div class="profile-box no-img" style="background-image: url(img/staff/DianeHolbert.jpg)>
                         <div class="p-box-inner">
                             <span class="name">Diane Holbert</span>
                             <span class="jobtitle">Treasurer</span>
@@ -262,7 +262,7 @@
                             <span class="jobtitle">Assessor</span>
                         </div>
                     </div>
-                    <div class="profile-box no-img">
+                    <div class="profile-box no-img" style="background-image: url(img/staff/ChristineDuffy.jpg)>
                         <div class="p-box-inner">
                             <span class="name">Christine Duffy</span>
                             <span class="jobtitle">Public Trustee</span>
