--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <div class="section">
                     <h1 class="title">Core Team</h1>
 
-                    <div class="profile-box no-img" style="background-image: url(img/staff/DianeHolbert.jpg)>
+                    <div class="profile-box no-img" style="background-image: url(img/staff/DianeHolbert.jpg)">
                         <div class="p-box-inner">
                             <span class="name">Diane Holbert</span>
                             <span class="jobtitle">Treasurer</span>
@@ -262,7 +262,7 @@
                             <span class="jobtitle">Assessor</span>
                         </div>
                     </div>
-                    <div class="profile-box no-img" style="background-image: url(img/staff/ChristineDuffy.jpg)>
+                    <div class="profile-box no-img" style="background-image: url(img/staff/ChristineDuffy.jpg)">
                         <div class="p-box-inner">
                             <span class="name">Christine Duffy</span>
                             <span class="jobtitle">Public Trustee</span>
