--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                     <div class="profile-box no-img">
                         <div class="p-box-inner">
                             <span class="name">Holly Carrell</span>
-                            <span class="jobtitle">Project Coordinator</span>
+                            <span class="jobtitle">Special Projects Manager</span>
                         </div>
                     </div>
                     <div class="profile-box no-img">
@@ -304,13 +304,13 @@
                             <span class="jobtitle">Sr. Manager, Application Services</span>
                         </div>
                     </div>
-                    <div class="profile-box" style="background-image: url(img/staff/johnthompson.jpg)">
+                    <div class="profile-box no-img" style="background-image: url(img/staff/johnthompson.jpg)">
                         <div class="p-box-inner">
                             <span class="name">John Thompson</span>
                             <span class="jobtitle">Open Data Program Manager</span>
                         </div>
                     </div>
-                    <div class="profile-box no-img">
+                    <div class="profile-box no-img" style="background-image: url(img/staff/joelhanson.jpg)">
                         <div class="p-box-inner">
                             <span class="name">Joel Hanson</span>
                             <span class="jobtitle">GIS Manager</span>
