--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
                     <p class="tags">Tags: <span>Transportation</span><span>Notifications</span></p>
                 </div>
                 <div class="thumb pull-right">
-                    <!--<a target="_blank" href="http://www.nearmedc.com">
+                    <a target="_blank" href="http://www.nearmedc.com">
                         <span class="play">&#9658;</span>
                         <div class="overlay"></div>
-                    </a>-->
+                    </a>
                     <img src="img/products/nearmedc.jpg" height="300px">
                 </div>
                 <div class="clearfix"></div>
@@ -268,7 +268,7 @@
                             <span class="jobtitle">Public Trustee</span>
                         </div>
                     </div>
-                    <div class="profile-box no-img">
+                    <div class="profile-box no-img" style="background-image: url(img/staff/hollycarrell.jpg)">
                         <div class="p-box-inner">
                             <span class="name">Holly Carrell</span>
                             <span class="jobtitle">Special Projects Manager</span>
