--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                             <span class="jobtitle">Director of Public Affairs</span>
                         </div>
                     </div>
-                    <div class="profile-box no-img">
+                    <div class="profile-box no-img" style="background-image: url(img/staff/paulclanton.jpg)">
                         <div class="p-box-inner">
                             <span class="name">Paul Clanton</span>
                             <span class="jobtitle">Chief Information Officer</span>
