add Wendy pic, minor edits

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         <div class="content-inner hidden" style="opacity: 1;" id="team_tab">
             <div class="subject">
                 <h1 class="title">The Open Data Team</h1>
-                <p class="description">Welcome to the team making this all happen.  Meetings are held throughout the month to discuss current and future plans on how to improve the data provided and to build our partnerships and outreach programs.</p>
+                <p class="description">Here is the team making all of this happen.  Meetings are held throughout the month to discuss current and future plans on how to improve the data provided and to build our partnerships and outreach programs.</p>
 
                 <div class="section">
                     <h1 class="title">Core Team</h1>
@@ -280,7 +280,7 @@
                             <span class="jobtitle">Director of Community Development</span>
                         </div>
                     </div>
-                    <div class="profile-box no-img">
+                    <div class="profile-box no-img" style="background-image: url(img/staff/wendyholmes.png)">
                         <div class="p-box-inner">
                             <span class="name">Wendy Holmes</span>
                             <span class="jobtitle">Director of Public Affairs</span>
