--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@
                 <div class="ribbon-wrapper-green"><div class="ribbon-green">COMING SOON</div></div>
                 <div class="message pull-left">
                     <img src="img/products/nearmedc-logo.png" height="75px">
-                    <p>NearMeDC is a notifications platform that notifies you when updates are made to community resources, county building permits, and road construction projects.</p>
+                    <p>COMING SOON: NearMeDC is a notifications platform that notifies you when updates are made to community resources, county building permits, and road construction projects.</p>
                     <p class="tags">Tags: <span>Transportation</span><span>Notifications</span></p>
                 </div>
-                <div class="thumb pull-right">
-                    <a target="_blank" href="http://www.nearmedc.com">
+<!--                 <div class="thumb pull-right">
+                    <a target="_blank" href="http://www.nearmedc.com"> 
                         <span class="play">&#9658;</span>
-                        <div class="overlay"></div>
+                        <div class="overlay"></div> -->
                     </a>
                     <img src="img/products/nearmedc.jpg" height="300px">
                 </div>
