--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
                 <div class="clearfix"></div>
             </div>
             <div class="product-bar">
-                <div class="ribbon-wrapper-green"><div class="ribbon-green">COMING SOON</div></div>
+                <!-- <div class="ribbon-wrapper-green"><div class="ribbon-green">COMING SOON</div></div> -->
                 <div class="message pull-left">
                     <img src="img/products/nearmedc-logo.png" height="75px">
                     <p>COMING SOON: NearMeDC is a notifications platform that notifies you when updates are made to community resources, county building permits, and road construction projects.</p>
                     <p class="tags">Tags: <span>Transportation</span><span>Notifications</span></p>
                 </div>
                 <div class="thumb pull-right">
-                    <a target="_blank"> 
+                    <a target="_blank" href="https://data.douglas.co.us/"> 
                         <span class="play">&#9658;</span>
                         <div class="overlay"></div>
                     </a>
