--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     <p class="tags">Tags: <span>Transportation</span><span>Notifications</span></p>
                 </div>
                 <div class="thumb pull-right">
-                    <a target="_blank" href="https://data.douglas.co.us/"> 
+                    <a target="_blank" href="http://www.nearmedc.com/"> 
                         <span class="play">&#9658;</span>
                         <div class="overlay"></div>
                     </a>
