Minor edits; .DS_Store Excludes

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 <p class="description">Here you will find the list of terms helpful to learning more about our program.</p>
                 <br>
                 <h2 class="title">Priority 1</h2>
-                <p class="description">These datasets are defined as high piority in most cases from the organization that creates the data.</p>
+                <p class="description">These datasets are defined as high priority in most cases from the organization that creates the data.</p>
                 <br>
                 <h2 class="title">Priority 2</h2>
                 <p class="description">These datasets are still meaningful to the organization but normally there are other datasets that take precedence.</p>
