NMDC Description Edit

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <!-- <div class="ribbon-wrapper-green"><div class="ribbon-green">COMING SOON</div></div> -->
                 <div class="message pull-left">
                     <img src="img/products/nearmedc-logo.png" height="75px">
-                    <p>COMING SOON: NearMeDC is a notifications platform that notifies you when updates are made to community resources, county building permits, and road construction projects.</p>
+                    <p>NearMeDC is a notifications platform that allows you to easily find out and stay informed about what's going on nearby in your city and county. Currently, we feature community resources, road construction "Cone Zones" and recently issued building permits.</p>
                     <p class="tags">Tags: <span>Transportation</span><span>Notifications</span></p>
                 </div>
                 <div class="thumb pull-right">
