--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <div class="subject">
                 <h1 class="title">Open Data Services</h1>
                 <p class="description">Welcome to the Douglas County Open Data products portal. Below are the current and planned data products that have been created and released through this initiative.</p>
+                <p class="description"><a href="http://www.douglas.co.us/documents/open-data-brochure.pdf" target="new">Download a printable brochure</a>
             </div>
             <div class="product-bar">
                 <div class="message pull-left">
