--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                     <li class="menu-item">
                         <a href="#team" data-rel="team_tab">Our Team</a>
                     </li>
-                    <li class="menu-item">
+<!--                     <li class="menu-item">
                         <a href="#blog" data-rel="blog_tab">Blog</a>
                     </li>
                     <li class="menu-item">
                         <a href="#glossary" data-rel="glossary_tab">Glossary</a>
-                    </li>
+                    </li> -->
                     <li class="menu-item">
                         <a href="#devs" data-rel="devs_tab">Devs</a>
                     </li>
@@ -101,20 +101,20 @@
             </div>
             <div class="product-bar">
                 <div class="message  pull-left">
-                    <h1>Douglas County Open Budget</h1>
-                    <p>Douglas County Open Budget provides access to financial information in a user-friendly format which allows users to search data by fund, department, division, category and line item.</p>
+                    <h1>Douglas County Open Finance</h1>
+                    <p>Douglas County Open Finance includes detailed information on the County Budget, Expenditures, and Fund Balances in an easy to use, intuitive interface. </p>
                     <p class="tags">Tags: <span>Budget</span><span>Finances</span><span>Revenue</span><span>Expenses</span><span>Capital Improvement</span></p>
                 </div>
                 <div class="thumb pull-right">
-                    <a target="_blank" href="http://budget.douglas.co.us/">
+                    <a target="_blank" href="http://douglasco.finance.socrata.com/#!/dashboard">
                         <span class="play">&#9658;</span>
                         <div class="overlay"></div>
                     </a>
-                    <img src="img/products/openbudget.jpg" height="300px">
+                    <img src="img/products/openexpenses.jpg" height="300px">
                 </div>
                 <div class="clearfix"></div>
             </div>
-            <div class="product-bar">
+<!--             <div class="product-bar">
                 <div class="message  pull-left">
                     <h1>Douglas County Open Expenditures</h1>
                     <p>Douglas County Open Expenditures provides access to vendor payments processed by the County's Finance Office. Payment information is searchable by fund, department, expense category and vendor.</p>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="clearfix"></div>
             </div>
-            <div class="product-bar">
+ -->            <div class="product-bar">
                 <!-- <div class="ribbon-wrapper-green"><div class="ribbon-green">COMING SOON</div></div> -->
                 <div class="message pull-left">
                     <img src="img/dougcoconnect.svg" height="75px">
