Shuffle NearMeDC; update AnalyzeDouglasCounty
Shuffle NearMeDC; update AnalyzeDouglasCounty

--- a/index.html
+++ b/index.html
@@ -84,29 +84,13 @@
                 <div class="clearfix"></div>
             </div>
             <div class="product-bar">
-                <!-- <div class="ribbon-wrapper-green"><div class="ribbon-green">COMING SOON</div></div> -->
-                <div class="message pull-left">
-                    <img src="img/products/nearmedc-logo.png" height="75px">
-                    <p>NearMeDC is a notifications platform that allows you to easily find out and stay informed about what's going on nearby in your city and county. Currently, we feature community resources, road construction "Cone Zones" and recently issued building permits.</p>
-                    <p class="tags">Tags: <span>Transportation</span><span>Notifications</span></p>
-                </div>
-                <div class="thumb pull-right">
-                    <a target="_blank" href="http://www.nearmedc.com/"> 
-                        <span class="play">&#9658;</span>
-                        <div class="overlay"></div>
-                    </a>
-                    <img src="img/products/nearmedc.jpg" height="300px">
-                </div>
-                <div class="clearfix"></div>
-            </div>
-            <div class="product-bar">
                 <div class="message  pull-left">
-                    <h1>Douglas County Open Finance</h1>
-                    <p>Douglas County Open Finance includes detailed information on the County Budget, Expenditures, and Fund Balances in an easy to use, intuitive interface. </p>
+                    <h1>Analyze Douglas County</h1>
+                    <p>Analyze Douglas County includes detailed information on the County Budget, Expenditures, and Fund Balances in an easy to use, intuitive interface. </p>
                     <p class="tags">Tags: <span>Budget</span><span>Finances</span><span>Revenue</span><span>Expenses</span><span>Capital Improvement</span></p>
                 </div>
                 <div class="thumb pull-right">
-                    <a target="_blank" href="http://douglasco.finance.socrata.com/#!/dashboard">
+                    <a target="_blank" href="http://www.analyzedouglascounty.com">
                         <span class="play">&#9658;</span>
                         <div class="overlay"></div>
                     </a>
@@ -156,6 +140,22 @@
                         <div class="overlay"></div>
                     </a>
                     <img src="img/products/outdoors.jpg" height="300px">
+                </div>
+                <div class="clearfix"></div>
+            </div>
+            <div class="product-bar">
+                <!-- <div class="ribbon-wrapper-green"><div class="ribbon-green">COMING SOON</div></div> -->
+                <div class="message pull-left">
+                    <img src="img/products/nearmedc-logo.png" height="75px">
+                    <p>NearMeDC is a notifications platform that allows you to easily find out and stay informed about what's going on nearby in your city and county. Currently, we feature community resources, road construction "Cone Zones" and recently issued building permits.</p>
+                    <p class="tags">Tags: <span>Transportation</span><span>Notifications</span></p>
+                </div>
+                <div class="thumb pull-right">
+                    <a target="_blank" href="http://www.nearmedc.com/"> 
+                        <span class="play">&#9658;</span>
+                        <div class="overlay"></div>
+                    </a>
+                    <img src="img/products/nearmedc.jpg" height="300px">
                 </div>
                 <div class="clearfix"></div>
             </div>
